fix firefox issue with overflowed search input in header.

--- a/less/style/blocks/header.less
+++ b/less/style/blocks/header.less
@@ -74,7 +74,6 @@
   order: 3;
   display: flex;
 
-  width: 20rem;
 }
 
 .header__meta__item--language {
