--- a/less/style/blocks/search.less
+++ b/less/style/blocks/search.less
@@ -7,6 +7,7 @@
   .control--input();
 
   height: 100%;
+  width: (270/16rem);
   padding: 15px 60px 15px 15px;
   border: 0;
 
